# cookiecutter-ml-projects

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/tests/: test_version.py
